--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
-        <form action="/pokemon" method="get">
+        <form action="/pokemon" method="post">
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
@@ -50,7 +50,7 @@
                     Office:
                     </div>
                   
-                    <select>
+                    <select id="ddlOffices" name="selectedOffice">
                        <option value = "Atlanta"> Atlanta </option>
                        <option value = "Chicago"> Chicago </option>
                        <option value = "Dallas"> Dallas </option>
