add pokemon font

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.js"></script>
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
-
+    <style type="text/css">
+        
+</style>
+<p class="customfont">Hello world!</p>
     <!-- Custom CSS -->
     <link href="css/simple-sidebar.css" rel="stylesheet">
     <link href="css/side-bar.css" rel="stylesheet">
